# act2

./: .envrc  .gitignore  CHANGELOG.md  act.cabal  amm.act  ast.hs  dmap.act.md  flake.nix  goals.md  semantics.md  token.act.md  token.old.act.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: 8r831ihn65q7b78434d6l8w7cwifs8p2-source  djihbrv74dhp2zly12y3n4x1gqdimwzs-source  ipc1jrqdvqily2qdpsd6nfgr78fxzy4m-source
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/Act/Syntax/: Typed.hs
