cabal-version:      3.4
name:               act
version:            0.1.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
author:             dxo
maintainer:         git@dxo.sh
copyright:          dxo
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common
    ghc-options:
        -Wall
        -Wno-unticked-promoted-constructors
    build-depends:
        text,
        containers,
        parameterized-utils,
        hashmap,
        hashable

library
    import:           common
    exposed-modules:  Act.Syntax.Typed
    default-language: GHC2021
    hs-source-dirs:   src
    build-depends:
        base ^>=4.16.4.0

executable act
    import:           common
    main-is:          Main.hs
    default-language: GHC2021
    hs-source-dirs:   exe
    build-depends:
        base ^>=4.16.4.0,
        act

test-suite act-test
    import:           common
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        act
